kubernetes/ecomapp/templates/db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
spec:
  selector:
    app: db-svc
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
