kubernetes/ecomapp/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecomapp-ingress
spec:
  rules:
  - host: ecomapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: users-service
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: orders-service
            port:
              number: 8001
